spacing issue

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -532,7 +532,7 @@ figure {
 #fh5co-work-section_2,
 #fh5co-blog-section,
 #fh5co-features {
-  padding: 10em 0;
+  padding: 7em 0;
 }
 @media screen and (max-width: 768px) {
   #fh5co-work-section,
@@ -817,12 +817,11 @@ figure {
   padding: 4em 0;
 }
 #fh5co-features .feature-left {
-  margin-bottom: 10px;
+  margin-bottom: 0;
 }
 @media screen and (max-width: 992px) {
   #fh5co-features .feature-left {
     margin-bottom: 30px;
-
   }
 }
 #fh5co-features .feature-left .icon i {
